Preventing titles from wrapping multiple lines.

--- a/src/inc/builder/core/css/builder.css
+++ b/src/inc/builder/core/css/builder.css
@@ -512,6 +512,7 @@
 	background: #fcfcfc;
 }
 .ttfmake-overlay-title {
+  	width: 300px;
 	margin: 0;
 	padding: 0 36px 0 10px;
 	color: #444;
@@ -519,6 +520,9 @@
 	font-weight: 600;
 	line-height: 36px;
 	text-rendering: optimizelegibility;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .ttfmake-overlay-close {
 	display: block;
